<resources>
    <string name="app_name">Privacy-Risk-Estimator</string>
    <string name="mode">Select Mode</string>
    <string-array name="modes">
        <item>GPS</item>
        <item>Geolife User Data</item>
    </string-array>
    <string-array name="users">
        <item>User 0</item>
        <item>User 1</item>
        <item>User 2</item>
        <item>User 3</item>
        <item>User 4</item>
        <item>User 5</item>
        <item>User 6</item>
        <item>User 7</item>
        <item>User 8</item>
        <item>User 9</item>
        <item>User 10</item>
        <item>User 11</item>
        <item>User 12</item>
        <item>User 13</item>
        <item>User 14</item>
        <item>User 15</item>
        <item>User 16</item>
        <item>User 17</item>
        <item>User 18</item>
        <item>User 19</item>
        <item>User 20</item>
    </string-array>
    <string name="train">Training Month:</string>
    <string name="test">Test:</string>
    <string name="from">Month</string>
    <string name="to">To</string>
    <string name="staypoint_header">States Found:</string>
    <string name="predictions">Select State and Hour</string>
    <string name="predict">Find Predictions</string>
    <string name="state">State</string>
    <string name="hour">Hour</string>
    <string-array name="hours">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
    </string-array>
    <string name="confidence">Confidence</string>
    <string-array name="confs">
        <item>10%</item>
        <item>20%</item>
        <item>30%</item>
        <item>40%</item>
        <item>50%</item>
        <item>60%</item>
        <item>70%</item>
        <item>80%</item>
        <item>90%</item>
        <item>100%</item>
    </string-array>
    <string name="paths">Path List:</string>
    <string name="run">Run</string>
</resources>
